@@ -100,6 +100,7 @@ Bugs fixed
 - Bug 2286 - Support for SLL header (de)serialization.
 - Bug 2287 - FlowMonitor is confused by IP over IP.
 - Bug 2288 - Ipv4 broadcast and multicast packets are replicated on all the interfaces.
+- Bug 2293 - Red Queue Estimator spins when trying to compute queue average size under long idle times.
 
 Known issues
 ------------
